# Inmoov_ROS2

./: .gitignore  LICENSE  README.md
Arduino/ServoTest/: ServoTest.ino
Arduino/Xicro_subsys1_ID_1/: Xicro_subsys1_ID_1.cpp  Xicro_subsys1_ID_1.h  Xicro_subsys1_ID_1.ino
Arduino/Xicro_subsys2_ID_2/: Xicro_subsys2_ID_2.cpp  Xicro_subsys2_ID_2.h  Xicro_subsys2_ID_2.ino
inmoov_ws/src/Xicro/xicro_pkg/: CMakeLists.txt
inmoov_ws/src/Xicro/xicro_pkg/config/: .Xicro_node_preSetup.xicro  setup_xicro_subsystem1.yaml  setup_xicro_subsystem2.yaml
inmoov_ws/src/Xicro/xicro_pkg/scripts/: generate_library.py  xicro_node_subsys1_ID_1_arduino.py  xicro_node_subsys2_ID_2_arduino.py
inmoov_ws/src/inmoov_behaviors/: package.xml  setup.cfg  setup.py
inmoov_ws/src/inmoov_behaviors/inmoov_behaviors/: face_recognized_behavior_node.py  face_tracking_behavior_node.py  greetings_known.txt  greetings_unknown.txt  movements_known.yaml
inmoov_ws/src/inmoov_description/: CMakeLists.txt  package.xml
inmoov_ws/src/inmoov_description/launch/: display.launch.py
inmoov_ws/src/inmoov_description/urdf/: config.joints.urdf.xacro  inmoov_torso_rarm_hand.urdf.xacro
inmoov_ws/src/inmoov_meshes/: CMakeLists.txt  package.xml
inmoov_ws/src/inmoov_vision/: package.xml  setup.cfg  setup.py
inmoov_ws/src/inmoov_vision/inmoov_vision/: face_recognition_node.py  face_tracker_node.py  generate_encodings.py  register_face.py
inmoov_ws/src/inmoov_vision/inmoov_vision/data/: encodings.pickle
inmoov_ws/src/inmoov_vision/launch/: vision_nodes.launch.py  vision_nodes_debug.launch.py
inmoov_ws/src/inmoov_voice/: package.xml  setup.cfg  setup.py
inmoov_ws/src/inmoov_voice/inmoov_voice/: tts_jaw_node.py  tts_node.py
inmoov_ws/src/xicro_nodes/: package.xml  setup.cfg  setup.py
inmoov_ws/src/xicro_nodes/launch/: xicro_nodes.launch.py
inmoov_ws/tools/: test_eSpeak_tts.py  test_tts.py  test_voices.py  xicro_servo_test_gui.py  xicro_servo_test_gui_old.py
piper/: test_piper.py
